<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.launchScreen.CitationNoUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="36dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="32dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="24dp"
                        android:text="@string/personal_data"
                        android:paddingStart="16dp"
                        style="@style/TextView"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtlytName"
                        style="@style/BaseOutlinedTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textCapWords"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtlytCurp"
                        style="@style/BaseOutlinedTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_curp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtCurp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textCapCharacters"
                            android:textAllCaps="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtlytPhone"
                        style="@style/BaseOutlinedTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_cellphone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="phone"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="36dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="32dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="24dp"
                        android:text="@string/citation_data"
                        android:paddingStart="16dp"
                        style="@style/TextView"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtlytArea"
                        style="@style/DropDown"
                        android:hint="@string/citation_area">

                        <AutoCompleteTextView
                            android:id="@+id/txtArea"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtlytHour"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/citation_hour">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none|time"
                            android:clickable="true"
                            android:focusable="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttnCreateCitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_citation"
                android:layout_gravity="center"
                android:layout_marginBottom="36dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>