<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.launchScreen.CitationNoUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="36dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtUserName"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/citation_hour">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:text="Claudia Guadalupe Ramírez Lazares" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtCurp"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/citation_hour">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:text="RALC010707MVZMZLA4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:visibility="gone">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_message"
                            android:backgroundTint="@android:color/transparent"/>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_phone"
                            android:backgroundTint="@android:color/transparent"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtDirection"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/user_direction"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:maxLines="5"
                            android:text="Calle Vicente Guerrero Privada Divina Providencia, Peñuela, Ver." />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtMail"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:maxLines="5"
                            android:text="clauxgrl@gmail.com" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtCellphone"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/user_cellphone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:maxLines="5"
                            android:text="271 315 4800" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPhone"
                        style="@style/BaseOutlinedTextInput"
                        android:hint="@string/user_cellphone"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none|time"
                            android:maxLines="5"
                            android:text="271 189 3456" />
                    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEmergencyCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="11dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:maxImageSize="40dp"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>